<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="20dp"
    android:elevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card_border"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/baseline_account_circle_24"
                android:contentDescription="avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/fullName"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@color/main"
                android:textStyle="bold"
                android:text="IS201"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                />

            <Button
                android:id="@+id/edit_staff"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:padding="1dp"
                android:text="Sửa"
                app:backgroundTint="@null"
                android:background="@drawable/rec_btn"
                android:textColor="#fff"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/remove_staff"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/remove_staff"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:padding="1dp"
                android:text="Xóa"
                app:backgroundTint="@null"
                android:background="@drawable/rec_btn"
                android:textColor="#fff"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/black_line"
            android:layout_marginTop="5dp"/>

        <!--
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ID: "
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/idStaff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17dp"/>
                </LinearLayout>
        -->
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Địa chỉ: "
                android:textStyle="bold"
                android:textSize="17dp"
                />
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textColor="@color/black"
                android:text="@string/ex_address"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SĐT: "
                android:textStyle="bold"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/ex_number"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Giới tính: "
                android:textStyle="bold"
                android:textSize="17dp"/>
            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/ex_gender"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ngày sinh: "
                android:textStyle="bold"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/ex_date"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Loại: "
                android:textStyle="bold"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/ex_program"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>